force-app/main/default/objects/DU_Offer__c/DU_Offer__c.object-meta.xml
<CustomObject>
    <description>CDM: The offer object is used to store information gathered while the customer follows the journey. This data is transported to Salesforce using Interaction Management.</description>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>