force-app/main/default/objects/DU_Offer__c/fields/DU_Account__c.field-meta.xml
<CustomField>
    <fullName>DU_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the customer data from Digital Renewal Match Maker stored as a prospect to the related customer preferences stored in the DU_Offer__c.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers (Account)</relationshipLabel>
    <relationshipName>DU_OffersAccount</relationshipName>
    <type>Lookup</type>
</CustomField>