force-app/main/default/objects/DU_Offer__c/fields/DU_Active__c.field-meta.xml
<CustomField>
    <fullName>DU_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Indicates whether Offer is Active or not.</description>
    <inlineHelpText>Indicates whether Offer is Active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>