force-app/main/default/objects/DU_Offer__c/fields/DU_AdditionalServicesPackages__c.field-meta.xml
<CustomField>
    <fullName>DU_AdditionalServicesPackages__c</fullName>
    <description>CDM: Contains a summary of all additional services packages chosen by the customer within the match maker.</description>
    <label>Additional Services/Packages</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>