force-app/main/default/objects/DU_Offer__c/fields/DU_AdvancedPaymentByCustomer__c.field-meta.xml
<CustomField>
    <fullName>DU_AdvancedPaymentByCustomer__c</fullName>
    <description>CDM: Payment, the customer did in advance. In case this is filled with values from Match Maker this contains the wish advanced payment.</description>
    <label>Advanced Payment by Customer​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>