force-app/main/default/objects/DU_Offer__c/fields/DU_CustomerPreference__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerPreference__c</fullName>
    <description>CDM: Contains the digital renewal customer preference from match maker: New Contract/Renewal; Keep Car Refinance; Return Car.</description>
    <label>Customer Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewContractRenewal</fullName>
                <label>New contract/renewal</label>
            </value>
            <value>
                <fullName>KeepCarRefinance</fullName>
                <label>Keep car/refinance</label>
            </value>
            <value>
                <fullName>ReturnCar</fullName>
                <label>Return car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>