force-app/main/default/objects/DU_Offer__c/fields/DU_EngineName__c.field-meta.xml
<CustomField>
    <fullName>DU_EngineName__c</fullName>
    <description>CDM: Indicates the engine of the related asset. Availability 2.1.0-19</description>
    <inlineHelpText>Description of the asset&apos;s engine (e.g. 2.0 TDI)</inlineHelpText>
    <label>Engine Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>