force-app/main/default/objects/DU_Offer__c/fields/DU_EquipmentSummary__c.field-meta.xml
<CustomField>
    <fullName>DU_EquipmentSummary__c</fullName>
    <description>CDM: Contains a summary of all equipment elements chosen by the customer within the match maker.</description>
    <label>Equipment Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>