force-app/main/default/objects/DU_Offer__c/fields/DU_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalID__c</fullName>
    <description>CDM: Holds an external ID for the offer record from an external source system</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for uploads</inlineHelpText>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>