force-app/main/default/objects/DU_Offer__c/fields/DU_Fee__c.field-meta.xml
<CustomField>
    <fullName>DU_Fee__c</fullName>
    <description>CDM: Contains the monthly fee a customer has to pay for his contract. In case this is filled with values from Match Maker this contains the wish monthly budget.</description>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>