force-app/main/default/objects/DU_Offer__c/fields/DU_FuelType__c.field-meta.xml
<CustomField>
    <fullName>DU_FuelType__c</fullName>
    <description>CDM: Indicates the fuel type of the related asset. Availability 2.1.0-19</description>
    <inlineHelpText>Description of the asset&apos;s fuel type (e.g. Petrol)</inlineHelpText>
    <label>Fuel Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEL</fullName>
                <label>Fuel Cell</label>
            </value>
            <value>
                <fullName>DIE</fullName>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>ELE</fullName>
                <label>Electric</label>
            </value>
            <value>
                <fullName>HYB</fullName>
                <label>Hybrid Petrol</label>
            </value>
            <value>
                <fullName>HYD</fullName>
                <label>Hybrid Diesel</label>
            </value>
            <value>
                <fullName>LPG</fullName>
                <label>Liquified Petroleum Gas</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>NAG</fullName>
                <label>Natural gas</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PET</fullName>
                <label>Petrol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>