force-app/main/default/objects/DU_Offer__c/fields/DU_Make__c.field-meta.xml
<CustomField>
    <fullName>DU_Make__c</fullName>
    <description>CDM: This should store the make of the vehicle</description>
    <inlineHelpText>This should store the make of the vehicle</inlineHelpText>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Make</valueSetName>
    </valueSet>
</CustomField>