force-app/main/default/objects/DU_Offer__c/fields/DU_MileageKM__c.field-meta.xml
<CustomField>
    <fullName>DU_MileageKM__c</fullName>
    <description>CDM: Yearly mileage (MI). In case this is filled with values from Match Maker this contains the wish mileage (KM).</description>
    <label>Mileage per year (in km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>