force-app/main/default/objects/DU_Offer__c/fields/DU_MileageMI__c.field-meta.xml
<CustomField>
    <fullName>DU_MileageMI__c</fullName>
    <description>CDM: Yearly mileage (MI). In case this is filled with values from Match Maker this contains the wish mileage (MI).</description>
    <label>Mileage per year (in mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>