force-app/main/default/objects/DU_Offer__c/fields/DU_Model__c.field-meta.xml
<CustomField>
    <fullName>DU_Model__c</fullName>
    <description>CDM: Stores the specification of the model.</description>
    <label>Model</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>