force-app/main/default/objects/DU_Offer__c/fields/DU_ModelName__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelName__c</fullName>
    <description>CDM: Indicates the model name of the related asset. Availability 2.1.0-19</description>
    <inlineHelpText>Description of the asset&apos;s model name (e.g. Golf R-Line 20 TDI 110 KW)</inlineHelpText>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>