force-app/main/default/objects/DU_Offer__c/fields/DU_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DU_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the Offer, containing e.g. customer preferences, to the opportunity</description>
    <inlineHelpText>Relates the Offer, containing e.g. customer preferences, to the opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Offers (Opportunity)</relationshipLabel>
    <relationshipName>DU_OffersOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>