force-app/main/default/objects/DU_Offer__c/fields/DU_PassedToProvidingPartner__c.field-meta.xml
<CustomField>
    <fullName>DU_PassedToProvidingPartner__c</fullName>
    <description>CDM: Indicates the Date and Time the Offer was passed to Dealer.</description>
    <label>Passed to providing Partner</label>
    <type>DateTime</type>
</CustomField>