force-app/main/default/objects/DU_Offer__c/fields/DU_ProductPreference__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductPreference__c</fullName>
    <description>CDM: Contains the the product preference chosen by the customer within the match maker.</description>
    <label>Product Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>