force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerCity__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerCity__c</fullName>
    <description>CDM: City of the postal address of the partner (for natural persons: the city of the postal address of the residential address; for legal persons: the city of the postal address of the registered address).</description>
    <label>Providing Partner City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>