force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerEmail__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerEmail__c</fullName>
    <description>CDM: Contains the email of the partner, which will receive the customer preferences from match maker (generic email address from the partner for leads)</description>
    <label>Providing Partner E-Mail Address</label>
    <type>Email</type>
</CustomField>