force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerName__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerName__c</fullName>
    <description>CDM: Contains the name of the partner, which will receive the customer preferences from match maker (name of the company)</description>
    <label>Providing Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>