force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerPhone__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerPhone__c</fullName>
    <description>CDM: Phone number of the partner.</description>
    <label>Providing Partner Phone</label>
    <type>Phone</type>
</CustomField>