force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerPostalCode__c</fullName>
    <description>CDM: ZIP code of the postal address of the partner (for natural persons the ZIP code of the residential address, for legal persons the ZIP code of the registered address).</description>
    <label>Providing Partner Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>