force-app/main/default/objects/DU_Offer__c/fields/DU_ProvidingPartnerStreet__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerStreet__c</fullName>
    <description>CDM: The partner&apos;s street address, including the street number.</description>
    <label>Providing Partner Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>