force-app/main/default/objects/DU_Offer__c/fields/DU_Term__c.field-meta.xml
<CustomField>
    <fullName>DU_Term__c</fullName>
    <label>Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>