force-app/main/default/objects/DU_Offer__c/fields/DU_UnverifiedVIN__c.field-meta.xml
<CustomField>
    <fullName>DU_UnverifiedVIN__c</fullName>
    <description>CDM: Stores the VIN we get from the Interaction Management. Is used to create a from Offer to asset if asset record exists.</description>
    <inlineHelpText>Stores the VIN we get from the Interaction Management. Is used to create a from Offer to asset if asset record exists.</inlineHelpText>
    <label>Unverified VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>