force-app/main/default/objects/DU_Offer__c/fields/DU_UsageType__c.field-meta.xml
<CustomField>
    <fullName>DU_UsageType__c</fullName>
    <description>CDM: Indicates the usage type of the asset. Availability 2.1.0-27</description>
    <inlineHelpText>Description of the asset&apos;s usage type (New Car or Used Car)</inlineHelpText>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NewCar</fullName>
                <label>New Car</label>
            </value>
            <value>
                <fullName>UsedCar</fullName>
                <label>Used Car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>