force-app/main/default/objects/DU_Offer__c/fields/DU_VehiclePowerInKWFrom__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInKWFrom__c</fullName>
    <description>CDM: Stores the vehicle power in KW. In this case the customer preference - minimum KW.</description>
    <label>Vehicle Power in KW from</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>