force-app/main/default/objects/DU_Offer__c/fields/DU_VehiclePowerInKWTo__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInKWTo__c</fullName>
    <description>CDM: Stores the vehicle power in KW. In this case the customer preference - maximum KW.</description>
    <label>Vehicle Power in KW to</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>