force-app/main/default/objects/DU_Offer__c/fields/DU_VehiclePowerInPSFrom__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInPSFrom__c</fullName>
    <description>CDM: Stores the vehicle power in PS. In this case the customer preference - minimum PS.</description>
    <label>Vehicle Power in PS from</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>