force-app/main/default/objects/DU_Offer__c/fields/DU_VehiclePowerInPSTo__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInPSTo__c</fullName>
    <description>CDM: Stores the vehicle power in PS In this case the customer preference - maximum PS.</description>
    <label>Vehicle Power in PS to</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>