force-app/main/default/objects/DU_Offer__c/fields/DU_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>DU_VehicleType__c</fullName>
    <description>CDM: Stores the type of vehicle</description>
    <label>Vehicle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>